<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ElegirPizza"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="407dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salir"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="547dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Web"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="105dp" />
</androidx.constraintlayout.widget.ConstraintLayout>